refactor: data4update endpoint
